Bug 1938489 - Don’t update other radio inputs in the same radio group when a radio input is appended to a disconnected subtree; r=avandolder

See https://github.com/whatwg/html/issues/10897.

Differential Revision: https://phabricator.services.mozilla.com/D233421